2008-03-05  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp: Removed.
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.inline.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytecodeInterpreter_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytecodeInterpreter_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytecodeInterpreter_ppc.inline.hpp:
	Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytecodes_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytecodes_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytes_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_CodeStubs_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_Defs_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_FpuStackSim_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_FpuStackSim_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_FrameMap_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_FrameMap_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LIRAssembler_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LIRAssembler_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LIRGenerator_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LinearScan_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LinearScan_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_MacroAssembler_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_MacroAssembler_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_Runtime1_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_globals_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/codeBuffer_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/copy_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/cppInterpreterGenerator_ppc.hpp:
	Likewise.
	* ports/hotspot/src/cpu/ppc/vm/cppInterpreter_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/cppInterpreter_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/debug_ppc.cpp: Likewise.