@@ -1,5 +1,11 @@
 2008-03-05  Gary Benson  <gbenson@redhat.com>
 
+	* ports/hotspot/src/cpu/ppc/vm/jni_ppc.h: Removed.
+	* ports/hotspot/src/os_cpu/linux_ppc/vm/linux_ppc.s: Likewise.
+	* ports/hotspot/src/os_cpu/linux_ppc/vm/linux_ppc64.s: Likewise.
+
+2008-03-05  Gary Benson  <gbenson@redhat.com>
+
 	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp: Removed.
 	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp: Likewise.
 	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.inline.hpp: Likewise.
